Completed Tetris Grid Assignment

--- a/235/Tetris-Grid/tetris-grid-start-files/tetris-grid.html
+++ b/235/Tetris-Grid/tetris-grid-start-files/tetris-grid.html
@@ -12,7 +12,7 @@
     <title>Tetris Grid</title>
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="css/bootstrap-reboot.css"> -->
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/gridstyles.css">
 </head>
 
@@ -29,7 +29,12 @@
                 Exercitationem, beatae blanditiis quasi vero, a incidunt officia, mollitia voluptate cumque sunt voluptates provident quidem esse?</p>
         </section>
         <ul class="menu">
-            <li><a href="http://tetris.com">Official Site</a></li>
+            <li><a href="http://tetris.com">Official Site</a><ul class="menu submenu">
+                <li><a href="http://google.com">Link 1</a></li>
+                <li><a href="http://youtube.com">Link 2</a></li>
+                <li><a href="http://netflix.com">Link 3</a></li>
+            </ul>
+            </li>
             <li><a href="https://en.wikipedia.org/wiki/Tetris">Wikipedia</a></li>
             <li><a href="https://thectwc.com">Championships</a></li>
         </ul>
