I need to learn more but his is an attempt at completing design to spec

--- a/235/DesignToSpec/index.html
+++ b/235/DesignToSpec/index.html
@@ -7,75 +7,95 @@
     </head>
     <body>
         <header>
-            <h1>Trees & Wood<img src="" alt="Axe"></h1>
-            <p>IGME 235<br>Rahmel Church Jr.</p>
+        <h1>Trees & Wood<img src="DesignToSpecAssets/Assets/axe.svg" alt="axe"></h1>
+        <p>IGME 235<br>Rahmel Church Jr.</p>
         </header>
         <main>
             <div class="oakTree">
-                <h2>The Oak Tree</h2>
-                <p>
-                    The tree is the base component used to make all wood items.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, temporibus voluptate! Harum nulla culpa accusamus quidem, alias, distinctio esse natus voluptas dignissimos atque dolorem id, minus obcaecati quibusdam rem mollitia voluptatum magnam optio et nobis! Quae quaerat incidunt possimus non assumenda esse expedita odit repellendus. Recusandae optio quis in vitae cum, corrupti accusantium sapiente ipsam molestias adipisci ea voluptatum tempore quam facilis dolorum nam alias. Perspiciatis unde sed quisquam, obcaecati eius eaque sit omnis quo expedita nisi dignissimos eveniet. Ad iste quam doloremque at. Ex velit earum assumenda quasi non magni suscipit perspiciatis alias asperiores, totam accusantium veritatis nemo autem?
-                </p>
-                <br>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis natus illo animi quod unde possimus aliquam dolore totam deleniti velit in vero amet nihil esse repellat ut consequuntur laboriosam, quia reprehenderit aliquid incidunt sit consectetur repudiandae minima. Eos aspernatur, dicta minus, possimus velit est veritatis placeat libero a nulla quis dolor deserunt repellendus rerum, nesciunt quae. Eligendi sunt a hic voluptate sint tenetur recusandae delectus blanditiis saepe totam nisi maxime perspiciatis quaerat eum quam incidunt dicta aspernatur molestiae libero, nemo ducimus sit error odit! Ut eaque hic rem asperiores voluptate perferendis. Quia iusto possimus rerum repellendus iure omnis optio ipsa dolorum aliquam velit cupiditate tenetur aliquid maiores doloremque, ullam accusantium ab similique quibusdam itaque sapiente fugiat alias numquam! Corrupti sint itaque sit aliquam assumenda inventore sequi similique quisquam! Similique, debitis! Ad excepturi temporibus veniam, error facilis et deleniti! Molestias soluta sed eos asperiores vero facere aspernatur quos voluptates possimus, nobis voluptate sint ipsum doloremque nulla rerum sapiente illum. Quidem impedit corrupti tempora laboriosam neque numquam temporibus nesciunt porro sint fuga natus quos laborum, atque nostrum eum soluta asperiores illo aliquid molestias quibusdam tempore distinctio. Labore voluptatum deserunt illo dolorem laudantium nihil sunt corrupti. Qui sint beatae alias non. Pariatur architecto tempore sequi, nulla corporis vitae officiis dignissimos incidunt doloremque repudiandae cupiditate modi possimus voluptatibus explicabo est in aperiam sint doloribus totam id. Vitae iste enim atque quasi rem optio modi qui id placeat labore tempora, commodi nobis omnis tempore laborum reprehenderit ipsam hic sint vero harum quod magni! Enim explicabo dolor maiores. Id unde eos quam distinctio quas! Officia harum, repellendus quia maiores est perferendis maxime quo quas nesciunt. Ab consectetur deleniti pariatur voluptatum quisquam sint ad eum quidem adipisci iusto atque optio placeat inventore, aspernatur, tenetur eligendi voluptates molestiae ipsum a vel quod similique modi. Tempora cupiditate quo minus.
-                </p>
-                <br>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, dolore est vero ducimus officiis, nesciunt reprehenderit debitis dolores, quidem eveniet iste provident nulla minima laudantium earum similique. Officia dolorem minus porro nisi ducimus odit reprehenderit veritatis reiciendis quas similique ullam aperiam minima, natus omnis qui! Voluptatum ut mollitia doloremque nostrum non beatae maxime blanditiis nobis commodi alias magnam odit sint omnis id tenetur eaque itaque voluptatem neque, consequuntur voluptas libero quis explicabo ex quo! Exercitationem quam incidunt necessitatibus nulla deleniti, perspiciatis impedit. Quidem sint rem nesciunt dolor magni fuga praesentium veniam. Perspiciatis excepturi praesentium vitae temporibus nulla odio esse sequi quasi, debitis velit labore reiciendis! Neque magni repudiandae reiciendis culpa ratione nobis, velit rem veritatis! Numquam, sit unde quam laboriosam voluptatum suscipit, earum saepe atque, ducimus debitis vero deleniti aliquid tenetur nisi animi consectetur quis. Sit praesentium, dicta est aperiam vitae cumque repellendus debitis obcaecati numquam temporibus voluptas assumenda non?
-                </p>
-                <img src="" alt="Oak Tree">
+                <div>
+                    <h2>The Oak Tree</h2>
+                    <p>
+                        The tree is the base component used to make all wood items.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, temporibus voluptate! Harum nulla culpa accusamus quidem, alias, distinctio esse natus voluptas dignissimos atque dolorem id, minus obcaecati quibusdam rem mollitia voluptatum magnam optio et nobis! Quae quaerat incidunt possimus non assumenda esse expedita odit repellendus. Recusandae optio quis in vitae cum, corrupti accusantium sapiente ipsam molestias adipisci ea voluptatum tempore quam facilis dolorum nam alias. Perspiciatis unde sed quisquam, obcaecati eius eaque sit omnis quo expedita nisi dignissimos eveniet. Ad iste quam doloremque at. Ex velit earum assumenda quasi non magni suscipit perspiciatis alias asperiores, totam accusantium veritatis nemo autem?
+                    </p>
+                    <br>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis natus illo animi quod unde possimus aliquam dolore totam deleniti velit in vero amet nihil esse repellat ut consequuntur laboriosam, quia reprehenderit aliquid incidunt sit consectetur repudiandae minima. Eos aspernatur, dicta minus, possimus velit est veritatis placeat libero a nulla quis dolor deserunt repellendus rerum, nesciunt quae. Eligendi sunt a hic voluptate sint tenetur recusandae delectus blanditiis saepe totam nisi maxime perspiciatis quaerat eum quam incidunt dicta aspernatur molestiae libero, nemo ducimus sit error odit! Ut eaque hic rem asperiores voluptate perferendis. Quia iusto possimus rerum repellendus iure omnis optio ipsa dolorum aliquam velit cupiditate tenetur aliquid maiores doloremque, ullam accusantium ab similique quibusdam itaque sapiente fugiat alias numquam! Corrupti sint itaque sit aliquam assumenda inventore sequi similique quisquam! Similique, debitis! Ad excepturi temporibus veniam, error facilis et deleniti! Molestias soluta sed eos asperiores vero facere aspernatur quos voluptates possimus, nobis voluptate sint ipsum doloremque nulla rerum sapiente illum. Quidem impedit corrupti tempora laboriosam neque numquam temporibus nesciunt porro sint fuga natus quos laborum, atque nostrum eum soluta asperiores illo aliquid molestias quibusdam tempore distinctio. Labore voluptatum deserunt illo dolorem laudantium nihil sunt corrupti. Qui sint beatae alias non. Pariatur architecto tempore sequi, nulla corporis vitae officiis dignissimos incidunt doloremque repudiandae cupiditate modi possimus voluptatibus explicabo est in aperiam sint doloribus totam id. Vitae iste enim atque quasi rem optio modi qui id placeat labore tempora, commodi nobis omnis tempore laborum reprehenderit ipsam hic sint vero harum quod magni! Enim explicabo dolor maiores. Id unde eos quam distinctio quas! Officia harum, repellendus quia maiores est perferendis maxime quo quas nesciunt. Ab consectetur deleniti pariatur voluptatum quisquam sint ad eum quidem adipisci iusto atque optio placeat inventore, aspernatur, tenetur eligendi voluptates molestiae ipsum a vel quod similique modi. Tempora cupiditate quo minus.
+                    </p>
+                    <br>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, dolore est vero ducimus officiis, nesciunt reprehenderit debitis dolores, quidem eveniet iste provident nulla minima laudantium earum similique. Officia dolorem minus porro nisi ducimus odit reprehenderit veritatis reiciendis quas similique ullam aperiam minima, natus omnis qui! Voluptatum ut mollitia doloremque nostrum non beatae maxime blanditiis nobis commodi alias magnam odit sint omnis id tenetur eaque itaque voluptatem neque, consequuntur voluptas libero quis explicabo ex quo! Exercitationem quam incidunt necessitatibus nulla deleniti, perspiciatis impedit. Quidem sint rem nesciunt dolor magni fuga praesentium veniam. Perspiciatis excepturi praesentium vitae temporibus nulla odio esse sequi quasi, debitis velit labore reiciendis! Neque magni repudiandae reiciendis culpa ratione nobis, velit rem veritatis! Numquam, sit unde quam laboriosam voluptatum suscipit, earum saepe atque, ducimus debitis vero deleniti aliquid tenetur nisi animi consectetur quis. Sit praesentium, dicta est aperiam vitae cumque repellendus debitis obcaecati numquam temporibus voluptas assumenda non?
+                    </p>
+                </div>
+                <img src="DesignToSpecAssets/Assets/oaktree.png" alt="Oak Tree">
             </div>
             <div class="forest">
-                <img src="" alt="Oak Tree Forest">
+                <img src="DesignToSpecAssets/Assets/valley.jpg" alt="Oak Tree Forest">
             </div>
             <section class="woodAssests">
                 <div id="planks">
-                    <h2>Planks</h2>
-                    <img src="" alt="plank">
-                    <p>
-                        Planks are one of the key ingredients that can be created from wood. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quis fugiat quo sint ex! Error molestiae libero possimus nam quibusdam perferendis harum aliquam cumque hic ratione nulla quia blanditiis laudantium impedit, sed sint iusto id labore consequatur ex deleniti, rem incidunt tempore corrupti? At recusandae dolor obcaecati odit excepturi nulla autem. Quae adipisci odio perspiciatis consectetur nulla, minus enim cupiditate nam? Eos praesentium porro recusandae.
-                    </p>
-                    <br>
-                    <p>The king of England has a really cool hat!</p>
+                    <div class="imageSection">
+                        <h2>Planks</h2>
+                        <img src="DesignToSpecAssets/Assets/planks.png" alt="plank">
+                    </div>
+                    <div class="textSection">
+                        <p>
+                            Planks are one of the key ingredients that can be created from wood. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quis fugiat quo sint ex! Error molestiae libero possimus nam quibusdam perferendis harum aliquam cumque hic ratione nulla quia blanditiis laudantium impedit, sed sint iusto id labore consequatur ex deleniti, rem incidunt tempore corrupti? At recusandae dolor obcaecati odit excepturi nulla autem. Quae adipisci odio perspiciatis consectetur nulla, minus enim cupiditate nam? Eos praesentium porro recusandae.
+                        </p>
+                        <br>
+                        <p>The king of England has a really cool hat!</p>
+                    </div>
                 </div>
                 <div id="sticks">
-                    <h2>Sticks</h2>
-                    <img src="" alt="stick"> 
-                    <p>
+                    <div class="imageSection">
+                        <h2>Sticks</h2>
+                        <img src="DesignToSpecAssets/Assets/stick.png" alt="stick">
+                    </div>
+                    <div class="textSection">
+                        <p>
                         Sticks are pretty neat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident itaque officiis quae voluptatum atque minus quibusdam beatae accusamus et? Dignissimos dolor maiores eaque perspiciatis exercitationem quibusdam recusandae quod voluptatibus amet libero quasi, provident consectetur suscipit repellat itaque vitae soluta alias. Optio corporis recusandae nostrum dicta ut, quia quas ab tempora?
-                    </p>
-                    <br>
-                    <p>
-                        Portland blog sriracha authentic readymade schlitz. Messenger bag sartorial cornhole, raw denim.
-                    </p>
+                        </p>
+                        <br>
+                        <p>
+                            Portland blog sriracha authentic readymade schlitz. Messenger bag sartorial cornhole, raw denim.
+                        </p>
+                    </div>
                 </div>
                 <div id="chests">
-                    <h2>Chests</h2>
-                    <img src="" alt="chest">
-                    <p>
+                    <div class="imageSection">
+                        <h2>Chests</h2>
+                        <img src="DesignToSpecAssets/Assets/chest.png" alt="chest">
+                    </div>
+                    <div class="textSection">
+                        <p>
                         Chests are one of the few items in the game that can combine with some other item! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum culpa error expedita iure vel doloribus, harum quasi magni provident consequuntur id accusamus quidem cumque neque modi odio corrupti officia dolorem.
-                    </p>
-                    <br>
-                    <p>
-                        Did you know that the king of England has neat shoes?
-                    </p>
+                        </p>
+                        <br>
+                        <p>
+                            Did you know that the king of England has neat shoes?
+                        </p>
+                    </div>
                 </div>
                 <div id="stairs">
-                    <h2>Stairs</h2>
-                    <img src="" alt="stairs">
-                    <p>
+                    <div class="imageSection">
+                        <h2>Stairs</h2>
+                        <img src="DesignToSpecAssets/Assets/stairs.png" alt="stairs">
+                    </div>
+                    <div class="textSection">
+                        <p>
                         Stairs are one of the few items in the game that let the player change elevation without jumping! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam distinctio consectetur, nam nemo necessitatibus est assumenda eum suscipit rerum harum fugiat in a. Ut ab illum repudiandae. Ad, asperiores sed!
-                    </p>
-                    <br>
-                    <p>Portland blog sriracha authentic readymade schlitz. Messenger bag.</p>
+                        </p>
+                        <br>
+                        <p>Portland blog sriracha authentic readymade schlitz. Messenger bag.</p>
+                    </div>
                 </div>
             </section>
         </main>
         <footer class="info">
-            <h1>Trees are pretty cool. Right?</h1>
-            <h1>Copyright 2022 RIT School of Interactive Games and Media</h1>
+            <div>
+                <h1>Trees are pretty cool. Right?</h1>
+                <h1>Copyright 2022 RIT School of Interactive Games and Media</h1>
+            </div>
         </footer>
     </body>
 </html>
