--- a/235/Web-Apps-Lab1/web-apps-lab-1.html
+++ b/235/Web-Apps-Lab1/web-apps-lab-1.html
@@ -14,6 +14,13 @@
 
      // add your new code here.
      colors.push("yellow");
+     console.log(colors[colors.length - 1]);
+     for(let i = 0; i < colors.length; i++)
+     {
+       console.log(colors[i]);
+     }
+     person.school = "RIT";
+     console.log(person.school);
       
 </script>
 </head>
