Finished both web apps labs

--- a/235/Web-Apps-Labs/web-apps-lab-1.html
+++ b/235/Web-Apps-Labs/web-apps-lab-1.html
@@ -21,6 +21,11 @@
      }
      person.school = "RIT";
      console.log(person.school);
+     console.log(Date.now() / 1000);
+     console.log(Math.PI);
+     console.log(Math.abs(-999));
+     let hello = "hello";
+     console.log(hello.toUpperCase());
       
 </script>
 </head>
