--- a/JSDemo/hello-5.html
+++ b/JSDemo/hello-5.html
@@ -17,47 +17,47 @@ let name = "Fred";
 // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/if...else
 	
 // #1
-if(true){
+if(42){
 	console.log("true"); // true
 }else{
 	console.log("false");
 }
 
 // #2
-if(false){
+if(undefined){
 	console.log("true");
 }else{
 	console.log("false"); // false
 }
 
 // #3
-if(2 > 1){
+if(null){
 	console.log("true"); // true
 }else{
 	console.log("false");
 }
 
 // #4
-if(0){
+if(""){
 	console.log("true"); 
 }else{
 	console.log("false"); // false
 }
 
 // #5
-if(undefined){
+if(0){
 	console.log("true"); 
 }else{
 	console.log("false"); // false
 }
 
 // #6
-if("fred"){
+if("true"){
 	console.log("true"); // true
 }else{
 	console.log("false");
 }
-if(new Array(), [])
+if("false")
 {
     console.log("true");
 }else
