--- a/235/project1/index.html
+++ b/235/project1/index.html
@@ -9,43 +9,56 @@
     <div class="container">
         <div id="header">
             <header>
-                <h1>Head</h1>
-                <img src="" alt="Picture of Me">
+                <h1>Rahmel Church Jr.</h1>
+                <img src="images/me.jpg" alt="Picture of Me">
             </header>
         </div>
         <div id="main">
             <main>
                 <div id="about">
-                    <p>About Me</p>
+                    <h2>Looking For A CO-OP or Internship Position As A Game Developer</h2>
+                    <p>
+                        Hello, My name is Rahmel Church Jr. and I am a second year student at the Rochester Institute of Technology(RIT).
+                        I am currently majoring in Game Design/Development and I aspire to become a game developer in the future.
+                        I want to create games that people can enjoy, games that help people get into a better mood, and make them feel happy.
+                        Below are some projects that I have worked on. Hopefully, you enjoy them. Thank you for visiting.
+                    </p>
                 </div>
                 <div id="projects">
                     <div id="project1">
                         <div>
-                            <h2>Project 1</h2>
-                            <p>Description</p>
+                            <h2>Placeholder Game</h2>
+                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
                         </div>
-                        <img src="" alt="Image of Project 1">
+                        <img src="images/placeholder.png" alt="Image of Project 1">
                     </div>
                     <div id="project2">
                         <div>
-                            <h2>Project 2</h2>
-                            <p>Description</p>
+                            <h2>Placeholder Game</h2>
+                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
                         </div>
-                        <img src="" alt="Image of Project 2">
+                        <img src="images/placeholder.png" alt="Image of Project 2">
                     </div>
                     <div id="project3">
                         <div>
-                            <h2>Project 3</h2>
-                            <p>Description</p>
+                            <h2>Placeholder Game</h2>
+                            <p>Description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project, description of the project, technologies and techniques used, my role in the project.</p>
                         </div>
-                        <img src="" alt="Image of Project 3">
+                        <img src="images/placeholder.png" alt="Image of Project 3">
                     </div>
                 </div>
             </main>
         </div>
         <div id="footer">
             <footer>
-                <p>Footer</p>
+                <h2>Contact Info & Resume</h2>
+                <div id="resume">
+                    <img src="images/Rahmel-Church-Jr-Resume.png" alt="Resume PDF Image">
+                </div>
+                <div id="footItems">
+                    <p>Email: rahmelchurch@gmail.com</p>
+                    <p><a target = "_blank" href="https://www.linkedin.com/in/rahchurch26">LinkedIn</a></p>
+                </div>
             </footer>
         </div>
     </div>
