Struggling with web apps lab 5 but trying my best

--- a/235/Web-Apps-Labs/web-apps-lab-5.html
+++ b/235/Web-Apps-Labs/web-apps-lab-5.html
@@ -43,7 +43,10 @@
 
 <script>
 /* Write your code here! */
-
+"use strict";
+let colorGroup = document.querySelectorAll("input[name='colorGroup']");
+let colorButton = document.querySelector("#colorButton");
+colorButton.addEventListener("click", changeText(document.querySelector("#info")));
 </script>
 </body>
 </html>
