Started Random Phrases Homework and Fixed Image Gallery Homework

--- a/235/ImageGallery/gallery-start/gallery.html
+++ b/235/ImageGallery/gallery-start/gallery.html
@@ -109,9 +109,9 @@
 			document.querySelector("#placeholder").src = `images/${dataImage}`;
 		}
 	}
-	for(let i in span)
+	for(let i of span)
 	{
-		span[i].addEventListener("click", dataImageClicked);
+		i.addEventListener("click", dataImageClicked);
 	}
 	</script>
 	   
