Attempting to display questions

--- a/235/project2/index.html
+++ b/235/project2/index.html
@@ -5,14 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project2</title>
+    <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
     <div class="container">
         <div id="header">
-
+            <h1>Trivia</h1>
+            <h1>Challenge Your Mind</h1>
+            <h2>Any Category, Any Difficulty</h2>
         </div>
         <div id="setup">
-
+            <p>Difficulty: <select name="difficulty">
+                <option value="any">Any</option>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select></p>
+            <p>Category: <select name="category">
+                <option value="Any">Any</option>
+                <option value="general">General Knowledge</option>
+                <option value="games">Entertainment: Video Games</option>
+                <option value="sports">Sports</option>
+            </select></p>
+            <h2><button>Begin Quiz</button></h2>
         </div>
         <div id="questions">
             
